FIXED: read more not clickable in events on small screen ;

--- a/static/styles/mdp.scss
+++ b/static/styles/mdp.scss
@@ -449,7 +449,7 @@ entity-carousel{ padding:0!important; width:109%!important;
 
   &__event-detail{
     position: relative;
-    z-index:1002!important;
+    //z-index:1002!important;
   }
 
   .read-more {
